update reduction more

--- a/modeling_no_reduction.ipynb
+++ b/modeling_no_reduction.ipynb
@@ -89,26 +89,27 @@
     }
    ],
    "source": [
+    "# seperate train and test data\n",
+    "# train/test split determined in 'data_normalization.ipynb'\n",
     "train_og = pd.DataFrame(df[df[\"group\"] == \"train\"]).copy()\n",
     "test_og = pd.DataFrame(df[df[\"group\"] == \"test\"]).copy()\n",
     "\n",
+    "# change diagnosis from 1 (non alz) and 2 (alz) to 0 and 1 \n",
+    "# set diagnosis to output\n",
     "y_train_og = pd.DataFrame(train_og[\"dx\"])\n",
     "y_train_og.loc[(train_og['dx'] == 1)] = 0\n",
     "y_train_og.loc[(train_og['dx'] == 2)] = 1\n",
     "y_test_og = pd.DataFrame(test_og[\"dx\"])\n",
     "y_test_og.loc[(test_og['dx'] == 1)] = 0\n",
     "y_test_og.loc[(test_og['dx'] == 2)] = 1\n",
+    "\n",
+    "# drop diagnosis, age, and group (train/test) from inputs\n",
     "x_train_og = train_og.drop(['dx', 'age', 'group'], axis=1)\n",
     "x_test_og = test_og.drop(['dx', 'age', 'group'], axis=1)\n",
     "\n",
+    "# recombine for full dataset\n",
     "y_full_og = (pd.concat([y_train_og, y_test_og], axis=0))\n",
-    "x_full_og = (pd.concat([x_train_og, x_test_og], axis=0))\n",
-    "\n",
-    "print(y_full_og.shape)\n",
-    "print(x_full_og.shape)\n",
-    "\n",
-    "print(y_full_og.sum())\n",
-    "print(y_full_og.count())\n"
+    "x_full_og = (pd.concat([x_train_og, x_test_og], axis=0))"
    ]
   },
   {
@@ -126,15 +127,14 @@
     }
    ],
    "source": [
+    "# initialize smote oversampler\n",
     "oversample_smt = SMOTE(random_state=726)\n",
-    "# oversample_bdl = BorderlineSMOTE()\n",
-    "# oversample_ada = ADASYN()\n",
+    "# over sample alz scans\n",
     "x_train_og_os, y_train_og_os = oversample_smt.fit_resample(x_train_og, y_train_og)\n",
     "\n",
+    "# full data sets for oversampled inputs\n",
     "y_full_og_os = (pd.concat([y_train_og_os, y_test_og], axis=0))\n",
-    "x_full_og_os = (pd.concat([x_train_og_os, x_test_og], axis=0))\n",
-    "print(y_full_og_os.shape)\n",
-    "print(x_full_og_os.shape)"
+    "x_full_og_os = (pd.concat([x_train_og_os, x_test_og], axis=0))"
    ]
   },
   {
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "#print('Computing PCA Embedding')\n",
+    "# pca of all data\n",
     "pca = decomposition.PCA(n_components=2)\n",
     "pca.fit(x_full_og)\n",
     "Y = pca.transform(x_full_og)\n",
@@ -279,115 +279,91 @@
     }
    ],
    "source": [
-    "kf = StratifiedKFold(n_splits=5, shuffle=True)\n",
+    "# initialize k folds\n",
+    "n = 5\n",
+    "kf = StratifiedKFold(n_splits=n, shuffle=True)\n",
+    "# set inputs and outputs\n",
     "X = x_train_og\n",
     "y = y_train_og\n",
     "\n",
+    "# Model definitions\n",
     "# Logistic Regression Classification Model ---\n",
     "mod_lgrg = LogisticRegression(max_iter=100000,solver=\"saga\",penalty='elasticnet',l1_ratio=1, random_state = 726)\n",
-    "#LogisticRegression(max_iter=100000,solver=\"sag\", random_state = 726)\n",
     "\n",
     "# Support Vector Classification Model --- \n",
     "mod_svc = svm.SVC(random_state=726,C=1.5,kernel='linear' ,probability = True,break_ties=True)\n",
-    "#svm.SVC(random_state=726, kernel='linear' ,probability = True,break_ties=True, penalty = 'l1')\n",
-    "#svm.SVC(random_state=726, kernel='linear' ,probability = True,break_ties=True)\n",
     "\n",
     "# Random Forest Classification Model ---\n",
     "mod_rfc = RandomForestClassifier(random_state=726, max_features=0.2) \n",
-    "#RandomForestClassifier(random_state=726, max_features=0.2) \n",
     "\n",
     "# Multi-Layer Perceptron Classification Model ---\n",
     "mod_mlp = MLPClassifier(random_state=726, activation = \"tanh\", alpha=1.8, hidden_layer_sizes=(150,), learning_rate = \"adaptive\")\n",
-    "#MLPClassifier(random_state=726, activation = \"tanh\", alpha=0.0005, hidden_layer_sizes=(150,), learning_rate = \"adaptive\")\n",
     "\n",
     "# Gradient Boosted Tree Classification Model ---\n",
     "mod_gbt = GradientBoostingClassifier(random_state=726, n_estimators=150, learning_rate=1.2, max_features=35, max_depth=8)\n",
-    "#GradientBoostingClassifier(random_state=726, n_estimators=80, learning_rate=1, max_features=3, max_depth=3)\n",
     "\n",
-    "# AdaBoost Classification Model ---\n",
-    "#mod_abc = AdaBoostClassifier(random_state=727, n_estimators=50,learning_rate=1.2)\n",
-    "#AdaBoostClassifier(random_state=727, n_estimators=50,learning_rate=1.05)\n",
+    "# initialize validation accuracies & f1 scores for all models\n",
+    "valid_acc_gbt,valid_acc_lgrg, valid_acc_mlp, valid_acc_svc, valid_acc_rfc = [],[],[],[],[]\n",
+    "valid_f1s_gbt,valid_f1s_lgrg, valid_f1s_mlp, valid_f1s_svc, valid_f1s_rfc = [],[],[],[],[]\n",
     "\n",
-    "valid_acc_gbt,valid_acc_lgrg, valid_acc_mlp, valid_acc_svc, valid_acc_rfc, valid_acc_abc = [],[],[],[],[],[]\n",
-    "\n",
-    "valid_f1s_gbt,valid_f1s_lgrg, valid_f1s_mlp, valid_f1s_svc, valid_f1s_rfc, valid_f1s_abc = [],[],[],[],[],[]\n",
-    "\n",
-    "\n",
-    "for train_ix, validation_ix in tqdm(kf.split(X,y),total=5):\n",
+    "# loop through folds to calculate validation accuracies and f1 scores\n",
+    "for train_ix, validation_ix in tqdm(kf.split(X,y),total=n):\n",
+    "    # set training and validation set\n",
     "    X_train, X_validation = X.iloc[train_ix], X.iloc[validation_ix]\n",
     "    y_train, y_validation = y.iloc[train_ix], y.iloc[validation_ix]\n",
     "\n",
+    "    # set training set for oversampled population\n",
+    "    # oversampled only used where proveded better validation f1 scores (tree based models)\n",
     "    X_train_over, y_train_over = oversample_smt.fit_resample(X_train, y_train)\n",
     "    \n",
+    "    # logistic regression model ---\n",
+    "    # model fit and predict\n",
     "    mod_lgrg.fit(X_train, y_train.to_numpy().ravel())\n",
-    "    pred_train_lgrg = mod_lgrg.predict(X_train)\n",
     "    pred_validation_lgrg = mod_lgrg.predict(X_validation)\n",
-    "    train_acc_lgrg = accuracy_score(y_train, pred_train_lgrg)\n",
     "    validation_acc_lgrg = accuracy_score(y_validation, pred_validation_lgrg)\n",
     "    validation_f1s_lgrg = f1_score(y_validation, pred_validation_lgrg)\n",
     "\n",
+    "    # support vector model ---\n",
+    "    # model fit and predict\n",
     "    mod_svc.fit(X_train, y_train.to_numpy().ravel())\n",
-    "    pred_train_svc = mod_svc.predict(X_train)\n",
     "    pred_validation_svc = mod_svc.predict(X_validation)\n",
-    "    train_acc_svc = accuracy_score(y_train, pred_train_svc)\n",
     "    validation_acc_svc = accuracy_score(y_validation, pred_validation_svc)\n",
     "    validation_f1s_svc = f1_score(y_validation, pred_validation_svc)\n",
     "\n",
+    "    # random forest model ---\n",
+    "    # model fit and predict\n",
     "    mod_rfc.fit(X_train_over, y_train_over.to_numpy().ravel())\n",
-    "    pred_train_rfc = mod_rfc.predict(X_train_over)\n",
     "    pred_validation_rfc = mod_rfc.predict(X_validation)\n",
-    "    train_acc_rfc = accuracy_score(y_train_over, pred_train_rfc)\n",
     "    validation_acc_rfc = accuracy_score(y_validation, pred_validation_rfc)\n",
     "    validation_f1s_rfc = f1_score(y_validation, pred_validation_rfc)\n",
     "    \n",
+    "    # multi-layer perceptron (fully connected neural net) model ---\n",
+    "    # model fit and predict\n",
     "    mod_mlp.fit(X_train, y_train.to_numpy().ravel())\n",
-    "    pred_train_mlp = mod_mlp.predict(X_train)\n",
     "    pred_validation_mlp = mod_mlp.predict(X_validation)\n",
-    "    train_acc_mlp = accuracy_score(y_train, pred_train_mlp)\n",
     "    validation_acc_mlp = accuracy_score(y_validation, pred_validation_mlp)\n",
     "    validation_f1s_mlp = f1_score(y_validation, pred_validation_mlp)\n",
     "    \n",
+    "    # gradient boosted trees model ---\n",
+    "    # model fit and predict\n",
     "    mod_gbt.fit(X_train_over, y_train_over.to_numpy().ravel())\n",
-    "    pred_train_gbt = mod_gbt.predict(X_train_over)\n",
     "    pred_validation_gbt = mod_gbt.predict(X_validation)\n",
-    "    train_acc_gbt = accuracy_score(y_train_over, pred_train_gbt)\n",
     "    validation_acc_gbt = accuracy_score(y_validation, pred_validation_gbt)\n",
     "    validation_f1s_gbt = f1_score(y_validation, pred_validation_gbt)\n",
     "    \n",
-    "#     mod_abc.fit(X_train_over, y_train_over.to_numpy().ravel())\n",
-    "#     pred_train_abc = mod_abc.predict(X_train_over)\n",
-    "#     pred_validation_abc = mod_abc.predict(X_validation)\n",
-    "#     train_acc_abc = accuracy_score(y_train_over, pred_train_abc)\n",
-    "#     validation_acc_abc = accuracy_score(y_validation, pred_validation_abc)\n",
-    "#     validation_f1s_abc = f1_score(y_validation, pred_validation_abc)\n",
-    "\n",
-    "#     lr_probs_scv = mod_mlp.predict_proba(X_validation)\n",
-    "#     lr_probs_scv = lr_probs_scv[:, 1]\n",
-    "\n",
-    "#     average_precision = average_precision_score(y_validation, lr_probs_scv)\n",
-    "#     avg_perc.append(average_precision)\n",
-    "    \n",
-    "#     print(confusion_matrix(y_validation, mod_mlp.predict(X_validation)))\n",
-    "    # plot_confusion_matrix(clf, X_train, y_train,cmap='GnBu',values_format='.4g')\n",
-    "    # plot_confusion_matrix(clf, X_train, y_train,cmap='GnBu',values_format='.4g',normalize='true')\n",
-    "    # plot_confusion_matrix(clf, X_validation, y_validation,cmap='GnBu',values_format='.4g')\n",
-    "    \n",
+    "    # store all models validation accuracies\n",
     "    valid_acc_lgrg.append(validation_acc_lgrg)\n",
     "    valid_acc_svc.append(validation_acc_svc)\n",
     "    valid_acc_rfc.append(validation_acc_rfc)\n",
     "    valid_acc_mlp.append(validation_acc_mlp)\n",
     "    valid_acc_gbt.append(validation_acc_gbt)\n",
-    "#     valid_acc_abc.append(validation_acc_abc)\n",
     "    \n",
+    "    # store all models f1 scores accuracies\n",
     "    valid_f1s_lgrg.append(validation_f1s_lgrg)\n",
     "    valid_f1s_svc.append(validation_f1s_svc)\n",
     "    valid_f1s_rfc.append(validation_f1s_rfc)\n",
     "    valid_f1s_mlp.append(validation_f1s_mlp)\n",
-    "    valid_f1s_gbt.append(validation_f1s_gbt)\n",
-    "#     valid_f1s_abc.append(validation_f1s_abc)\n",
-    "# print(np.mean(validation_acc_array))\n",
-    "# print(validation_acc_array)\n",
-    "# print(np.mean(avg_perc))\n"
+    "    valid_f1s_gbt.append(validation_f1s_gbt)\n"
    ]
   },
   {
@@ -408,134 +384,13 @@
     }
    ],
    "source": [
-    "oversample_smt = SMOTE(random_state=726)\n",
-    "# oversample_bdl = BorderlineSMOTE()\n",
-    "# oversample_ada = ADASYN()\n",
-    "x_train_over, y_train_over = oversample_smt.fit_resample(x_train_og, y_train_og)\n",
-    "\n",
-    "y_full_over = (pd.concat([y_train_over, y_test_og], axis=0))\n",
-    "x_full_over = (pd.concat([x_train_over, x_test_og], axis=0))\n",
-    "\n",
-    "# Logistic Regression Classification Model ---\n",
-    "#mod_lgrg = LogisticRegression(max_iter=100000,solver=\"sag\", random_state = 726)\n",
-    "\n",
-    "# Support Vector Classification Model --- \n",
-    "#mod_svc  = svm.SVC(random_state=726, kernel='linear' ,probability = True,break_ties=True)\n",
-    "\n",
-    "# Random Forest Classification Model ---\n",
-    "# mod_rfc = RandomForestClassifier(random_state=726, max_features=0.2) \n",
-    "\n",
-    "# Multi-Layer Perceptron Classification Model ---\n",
-    "# mod_mlp = MLPClassifier(random_state=726, activation = \"tanh\", alpha=0.0005, hidden_layer_sizes=(150,), learning_rate = \"adaptive\")\n",
-    "\n",
-    "# Gradient Boosted Tree Classification Model ---\n",
-    "# mod_gbt = GradientBoostingClassifier(random_state=726, n_estimators=80, learning_rate=1, max_features=3, max_depth=3)\n",
-    "\n",
-    "# AdaBoost Classification Model ---\n",
-    "# mod_abc = AdaBoostClassifier(random_state=726, n_estimators=50,learning_rate=1.05)\n",
-    "\n",
+    "# re-fit models to full training set\n",
+    "# oversampled where validation f1score performance was better (tree based methods)\n",
     "mod_lgrg.fit(x_train_og, y_train_og.to_numpy().ravel())\n",
     "mod_svc.fit(x_train_og, y_train_og.to_numpy().ravel())\n",
-    "mod_rfc.fit(x_train_over, y_train_over.to_numpy().ravel())\n",
+    "mod_rfc.fit(x_train_og_os, y_train_og_os.to_numpy().ravel())\n",
     "mod_mlp.fit(x_train_og, y_train_og.to_numpy().ravel())\n",
-    "mod_gbt.fit(x_train_over, y_train_over.to_numpy().ravel())\n",
-    "# mod_abc.fit(x_train_over, y_train_over.to_numpy().ravel())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X = x_train_og\n",
-    "# y = y_train_og\n",
-    "# mod_asc = autosklearn.classification.AutoSklearnClassifier()\n",
-    "# mod_asc.fit(x_train_og, y_train_og)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mod_asc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# kf = StratifiedKFold(n_splits=10, shuffle=True)\n",
-    "# X = x_train_og\n",
-    "# y = y_train_og\n",
-    "# x_train_over, y_train_over_2 = oversample_smt.fit_resample(x_train_og, y_train_og)\n",
-    "\n",
-    "# lr_list = [1.2,1.8,2,3]\n",
-    "\n",
-    "# #mod_gbt = GradientBoostingClassifier(random_state=726, n_estimators=, learning_rate=1, max_features=10, max_depth=5)\n",
-    "\n",
-    "# valid_acc_gbt_fin = []\n",
-    "# valid_f1s_gbt_fin = []\n",
-    "\n",
-    "# # #abc = AdaBoostClassifier(n_estimators=50, learning_rate=1)\n",
-    "\n",
-    "# for lr in lr_list:\n",
-    "#     valid_acc_abc = []\n",
-    "#     valid_f1s_abc = []\n",
-    "    \n",
-    "#     mod_gbt = AdaBoostClassifier(random_state=727, n_estimators=50,learning_rate=1.2)\n",
-    "    \n",
-    "#     for train_ix, validation_ix in tqdm(kf.split(X,y),total=10):\n",
-    "#         X_train, X_validation = X.iloc[train_ix], X.iloc[validation_ix]\n",
-    "#         y_train, y_validation = y.iloc[train_ix], y.iloc[validation_ix]\n",
-    "        \n",
-    "#         X_train_over, y_train_over = oversample_smt.fit_resample(X_train, y_train)\n",
-    "    \n",
-    "#         mod_gbt.fit(X_train_over, y_train_over.to_numpy().ravel())\n",
-    "#         pred_train_gbt = mod_gbt.predict(X_train_over)\n",
-    "#         pred_validation_gbt = mod_gbt.predict(X_validation)\n",
-    "#         train_acc_gbt = accuracy_score(y_train_over, pred_train_gbt)\n",
-    "#         validation_acc_gbt = accuracy_score(y_validation, pred_validation_gbt)\n",
-    "#         validation_f1s_gbt = f1_score(y_validation, pred_validation_gbt)\n",
-    "    \n",
-    "#         valid_acc_gbt.append(validation_acc_gbt)\n",
-    "    \n",
-    "#         valid_f1s_gbt.append(validation_f1s_gbt)\n",
-    "    \n",
-    "#     mod_gbt.fit(x_train_over, y_train_over_2.to_numpy().ravel())\n",
-    "\n",
-    "#     print(\"Learning rate: \", lr)\n",
-    "#     print(\"valid acc: {0:.3f}\".format(np.mean(valid_acc_gbt)))\n",
-    "#     print(\"valid f1: {0:.3f}\".format(np.mean(valid_f1s_gbt)))\n",
-    "#     print(confusion_matrix(y_train_over_2, mod_gbt.predict(x_train_over)))\n",
-    "    \n",
-    "#     print(\"Accuracy score (training): {0:.3f}\".format(gb_clf.score(X_train, y_train)))\n",
-    "#     print(\"Accuracy score (validation): {0:.3f}\".format(gb_clf.score(X_val, y_val)))\n",
-    "\n",
-    "# mod_lgrg.fit(x_train_og, y_train_og.to_numpy().ravel())\n",
-    "\n",
-    "# ----------\n",
-    "\n",
-    "#     lr_probs_scv = mod_mlp.predict_proba(X_validation)\n",
-    "#     lr_probs_scv = lr_probs_scv[:, 1]\n",
-    "\n",
-    "#     average_precision = average_precision_score(y_validation, lr_probs_scv)\n",
-    "#     avg_perc.append(average_precision)\n",
-    "    \n",
-    "#     print(confusion_matrix(y_validation, mod_mlp.predict(X_validation)))\n",
-    "    # plot_confusion_matrix(clf, X_train, y_train,cmap='GnBu',values_format='.4g')\n",
-    "    # plot_confusion_matrix(clf, X_train, y_train,cmap='GnBu',values_format='.4g',normalize='true')\n",
-    "    # plot_confusion_matrix(clf, X_validation, y_validation,cmap='GnBu',values_format='.4g')\n",
-    "    \n",
-    "\n",
-    "# print(np.mean(validation_acc_array))\n",
-    "# print(validation_acc_array)\n",
-    "# print(np.mean(avg_perc))\n",
-    "\n"
+    "mod_gbt.fit(x_train_og_os, y_train_og_os.to_numpy().ravel())"
    ]
   },
   {
@@ -578,6 +433,7 @@
     }
    ],
    "source": [
+    "# show average validation accuracy\n",
     "print(\"Average Validation Accuracy\")\n",
     "print(\"LGRG : \", np.mean(valid_acc_lgrg))\n",
     "print(\"SVC  : \", np.mean(valid_acc_svc))\n",
@@ -586,21 +442,14 @@
     "print(\"GBT  : \", np.mean(valid_acc_gbt))\n",
     "# print(\"ABC  : \", np.mean(valid_acc_abc))\n",
     "\n",
+    "# show average validation f1 score\n",
     "print(\"\\nAverage Validation F1 Scores\")\n",
     "print(\"LGRG : \", np.mean(valid_f1s_lgrg))\n",
     "print(\"SVC  : \", np.mean(valid_f1s_svc))\n",
     "print(\"RFC  : \", np.mean(valid_f1s_rfc))\n",
     "print(\"MLP  : \", np.mean(valid_f1s_mlp))\n",
     "print(\"GBT  : \", np.mean(valid_f1s_gbt))\n",
-    "# print(\"ABC  : \", np.mean(valid_f1s_abc))\n",
-    "\n",
-    "print(\"\\nConfusion Matrix (Training)\")\n",
-    "print(confusion_matrix(y_train_og, mod_lgrg.predict(x_train_og)))\n",
-    "print(confusion_matrix(y_train_og, mod_svc.predict(x_train_og)))\n",
-    "print(confusion_matrix(y_train_over, mod_rfc.predict(x_train_over)))\n",
-    "print(confusion_matrix(y_train_og, mod_mlp.predict(x_train_og)))\n",
-    "print(confusion_matrix(y_train_over, mod_gbt.predict(x_train_over)))\n",
-    "# print(confusion_matrix(y_train_over, mod_abc.predict(x_train_over)))\n"
+    "# print(\"ABC  : \", np.mean(valid_f1s_abc))"
    ]
   },
   {
@@ -652,10 +501,6 @@
     "lr_probs_mlp = lr_probs_mlp[:, 1]\n",
     "lr_probs_gbt = mod_gbt.predict_proba(x_test_og)\n",
     "lr_probs_gbt = lr_probs_gbt[:, 1]\n",
-    "# lr_probs_abc = mod_abc.predict_proba(x_test_og)\n",
-    "# lr_probs_abc = lr_probs_abc[:, 1]\n",
-    "# lr_probs_asc = mod_asc.predict_proba(x_test_og)\n",
-    "# lr_probs_asc = lr_probs_asc[:, 1]\n",
     "\n",
     "pred_test_lgrg = mod_lgrg.predict(x_test_og)\n",
     "test_acc_lgrg = accuracy_score(y_test_og, pred_test_lgrg)\n",
