--- a/data_normalization.ipynb
+++ b/data_normalization.ipynb
@@ -83,7 +83,7 @@
     "# drops young patients \n",
     "minimum = (max(min(df[df[\"dx\"] == 1][\"age\"]),min(df[df[\"dx\"] == 2][\"age\"])))\n",
     "maximum = (min(max(df[df[\"dx\"] == 1][\"age\"]),max(df[df[\"dx\"] == 2][\"age\"])))\n",
-    "df = df.loc[(df[\"age\"] >= minimum) & (df[\"age\"] <= maximum)]\n",
+    "df = df.loc[(df[\"age\"] >= minimum-0.01) & (df[\"age\"] <= maximum+0.01)]\n",
     "\n",
     "# split diagnosis and rest of data\n",
     "diag = pd.DataFrame(df[\"dx\"])\n",
@@ -208,7 +208,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 49/49 [01:39<00:00,  2.03s/it]\n"
+      "100%|██████████| 49/49 [01:16<00:00,  1.56s/it]\n"
      ]
     }
    ],
@@ -354,10 +354,16 @@
     "          bundle_measures_std[0][42],bundle_measures_std[0][43],bundle_measures_std[0][44],\n",
     "          bundle_measures_std[0][45],bundle_measures_std[0][46],bundle_measures_std[0][47],\n",
     "          bundle_measures_std[0][48]], axis =1)\n",
-    "\n",
     "# save data frame as 'standardized_data.csv'\n",
     "std_data.to_csv('./data/standardized_data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
